--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,53 @@
-<!DOCTYPE html>
+{% load staticfiles %}<!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
   </head>
   <body>
-    <h1>HOME</h1>
+    <div class="table-responsive">
+	<table id='table_data' class="table table-hover">
+		<thead>
+			<tr>
+				<th>Year</th>
+				<th>Ethnicity</th>
+				<th>Cause of death</th>
+				<th>Count</th>
+				<th>Percent</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+			</tr>
+		</tbody>
+	</table>
+	</div>
   </body>
 </html>
+
+{% block js %}
+<script type="text/javascript">
+	dajax('{% url "Cause-list" %}?format=json');
+
+	function dajax(url){
+	    $.ajax({
+	        url : url,
+	        type : 'get',
+	        success : function(data){
+	        	$.each(data['results'], function(obj){
+	        		data['results'][obj]['year']
+                	$("#table_data").append('<tr><td>'+data['results'][obj]['year']+'</td><td>'+data['results'][obj]['ethnicity']+'</td><td>'+data['results'][obj]['cause_of_death']+'</td><td>'+data['results'][obj]['count']+'</td><td>'+data['results'][obj]['percent']+'</td></tr>');
+              	});
+	      	},
+	        error : function(xhr, errmsg, err) {
+	          //alert(xhr.status + ": " + xhr.responseText);   
+	          //console.log(xhr.status + ": " + xhr.responseText);    
+	        }
+      });
+	}
+</script>
+{% endblock %}
